[package]
name = "xit"
version = "0.2.0"
edition = "2024"
authors = ["whothehellwasthat.dev@gmail.com"]
description = "A git-like command line tool written in Rust."
license = "MIT"
repository = "https://github.com/Shivrajsoni/xit"
keywords = ["cli", "git", "vcs"]
README = "README.md"

[dependencies]
flate2 = "1.1.2"
sha-1 = "0.10.1"
term_colr = "0.1.0"
hex = "0.4.3"
walkdir = "2.5.0"
